--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
     environment: testing
     env: #SPECIFIC ENV VARS
       MONGODB_CLUSTER_ADDRESS: cluster0.dlqgq.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }} # USING SECRETS USERNAME
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }} # USING SECRETS PASSWORD
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
