--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }} # USING SECRETS PASSWORD
       PORT: 8080
     runs-on: ubuntu-latest
+    container: 
+      image: node:16
     steps:
       - name: Get Code
         uses: actions/checkout@v3
