--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,14 +9,21 @@ env: #GLOBAL ENV VARS
 jobs:
   test:
     environment: testing
-    env: #SPECIFIC ENV VARS
-      MONGODB_CLUSTER_ADDRESS: cluster0.dlqgq.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }} # USING SECRETS USERNAME
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }} # USING SECRETS PASSWORD
-      PORT: 8080
     runs-on: ubuntu-latest
     container: 
-      image: node:16
+      image: node:16 # https://hub.docker.com/_/node
+    services:
+      mongodb: #CAN BE ANYTHING, USE BELOW ON MONGODB_CONNECTION_PROTOCOL and MONGODB_CLUSTER_ADDRESS
+        image: mongo # https://hub.docker.com/_/mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root # https://hub.docker.com/_/mongo#:~:text=restart%3A%20always%0A%20%20%20%20environment%3A-,MONGO_INITDB_ROOT_USERNAME,-%3A%20root%0A%20%20%20%20%20%20MONGO_INITDB_ROOT_PASSWORD%3A%20example
+          MONGO_INITDB_ROOT_PASSWORD: password # DONT BE ONLINE AFTER THE JOB IS FINISHED, SO DONT WORRY
+    env: #SPECIFIC ENV VARS
+      MONGODB_CONNECTION_PROTOCOL: mongodb
+      MONGODB_CLUSTER_ADDRESS: mongodb
+      MONGODB_USERNAME: root
+      MONGODB_PASSWORD: password
+      PORT: 8080
     steps:
       - name: Get Code
         uses: actions/checkout@v3
