--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       MONGODB_CLUSTER_ADDRESS: 127.0.0.1
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
-      PORT: 27017
+      #PORT: 27017
     services:
       mongodb: #CAN BE ANYTHING, USE BELOW ON MONGODB_CONNECTION_PROTOCOL and MONGODB_CLUSTER_ADDRESS
         image: mongo # https://hub.docker.com/_/mongo
