--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     #container: 
     #  image: node:16 # https://hub.docker.com/_/node
+    services:
     env: #SPECIFIC ENV VARS
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      MONGODB_CLUSTER_ADDRESS: 127.0.0.1
+      MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
-      #PORT: 27017
-    services:
+      PORT: 8080
       mongodb: #CAN BE ANYTHING, USE BELOW ON MONGODB_CONNECTION_PROTOCOL and MONGODB_CLUSTER_ADDRESS
         image: mongo # https://hub.docker.com/_/mongo
         ports:
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
